--- a/templates/list_prof.html
+++ b/templates/list_prof.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+    <h2>Список профессий</h2>
     {% if list == 'ol' %}
         <ol>
             {% for item in items %}
